// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple-entries build should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4004/runtime-1dfed0401de0d11c6838.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/vendors~details~home-ea438a2b3ef45f66c270.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/home-ea5778798875a49dba7a.js\\" crossorigin=\\"anonymous\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4004/runtime-1dfed0401de0d11c6838.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/vendors~details~home-ea438a2b3ef45f66c270.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/home-ea5778798875a49dba7a.js\\" crossorigin=\\"anonymous\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;

exports[`multiple-entries build should generate the expected files 1`] = `
Object {
  "4-7e4ff1570234ffafe170.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "details-0e82719ea3ab71aafb06.css": "._91MnZhe{color:#00f}
",
  "details-5400d2a9f136d75fc740.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "home-62bf94bf0fd2ba3c2aa2.css": "._1QX0Hyt{color:red}
",
  "home-ea5778798875a49dba7a.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "production/au/details/:id/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4004/details-0e82719ea3ab71aafb06.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_91MnZhe\\" data-reactroot=\\"\\">Welcome to the Details page - <!-- -->au<!-- -->loading...</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4004/runtime-1dfed0401de0d11c6838.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/vendors~details~home-ea438a2b3ef45f66c270.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/details-5400d2a9f136d75fc740.js\\" crossorigin=\\"anonymous\\"></script>
  </body>
</html>",
  "production/au/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4004/runtime-1dfed0401de0d11c6838.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/vendors~details~home-ea438a2b3ef45f66c270.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/home-ea5778798875a49dba7a.js\\" crossorigin=\\"anonymous\\"></script>
  </body>
</html>",
  "production/nz/details/:id/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"nz\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4004/details-0e82719ea3ab71aafb06.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_91MnZhe\\" data-reactroot=\\"\\">Welcome to the Details page - <!-- -->nz<!-- -->loading...</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4004/runtime-1dfed0401de0d11c6838.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/vendors~details~home-ea438a2b3ef45f66c270.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/details-5400d2a9f136d75fc740.js\\" crossorigin=\\"anonymous\\"></script>
  </body>
</html>",
  "production/nz/index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"nz\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4004/home-62bf94bf0fd2ba3c2aa2.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->nz</h1></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4004/runtime-1dfed0401de0d11c6838.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/vendors~details~home-ea438a2b3ef45f66c270.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4004/home-ea5778798875a49dba7a.js\\" crossorigin=\\"anonymous\\"></script>
  </body>
</html>",
  "runtime-1dfed0401de0d11c6838.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~details~home-ea438a2b3ef45f66c270.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`multiple-entries start should render details page correctly 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/details.css\\">
  <script charset=\\"utf-8\\" src=\\"/0.js\\"></script></head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Details__root___91MnZhe\\" data-reactroot=\\"\\">Welcome to the Details page - <!-- -->au<!-- -->ID: 123<span>Some special async content</span></h1></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~details~home.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/details.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/details.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Details__root___91MnZhe\\" data-reactroot=\\"\\">Welcome to the Details page - <!-- -->au<!-- -->loading...</h1></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~details~home.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/details.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;

exports[`multiple-entries start should render home page correctly 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/home.css\\">
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Home__root___1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~details~home.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/home.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <script>
      window.APP_CONFIG = {\\"site\\":\\"au\\",\\"environment\\":\\"production\\"};
    </script>
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/home.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><h1 class=\\"Home__root___1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page - <!-- -->au</h1></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~details~home.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/home.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;
